# rank_filter

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  Readme.md  _version.py  appveyor.yml  python_rank_filter.cxx  rank_filter.cxx  rank_filter.hxx  rank_filter_py.cxx  run_nosetest.py  run_unittest.py  sdeque.hxx  setup.cfg  setup.py  test_rank_filter.cxx
.travis_scripts/: install_boost.sh  install_vigra.sh
.travis_scripts/requirements/: development-stage2.txt
cmake/modules/: FindCYTHON.cmake  FindNOSE.cmake  FindNUMPY.cmake  FindPYTHON.cmake  FindVIGRA.cmake
include/: rank_filter.hxx  rank_filter_base.hxx  rank_filter_vigra.hxx
rank_filter.recipe/: bld.bat  build.sh  meta.yaml  run_test.py
src/: benchmark_rank_filter.cxx  benchmark_rank_filter.py  rank_filter.pxd  rank_filter.pyx  rank_filter_py.cxx
test/: run_nosetest.py  test_rank_filter.py  test_rank_filter_base.cxx  test_rank_filter_vigra.cxx
tests/: test_rank_filter.cxx  test_rank_filter_base.cxx  test_rank_filter_vigra.cxx
